src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Booth_Sponsor_Cost__c</fullName>
        <label>Booth/Sponsor Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Campaign_Threshold__c</fullName>
        <description>Full Circle CRM Field. If used - this number is evaluated as part of the engagement threshold for a new campaign response. Negative values are supported to create responses that below the engagement threshold irrespective of the lead/contact engagement threshold.</description>
        <inlineHelpText>Full Circle CRM Field. If used - this number is evaluated as part of the engagement threshold for a new campaign response. Negative values are supported to create responses that below the engagement threshold irrespective of the lead/contact engagement th</inlineHelpText>
        <label>FCCRM Campaign Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_Exclude_From_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <label>Campaign Sub Type</label>
        <picklist>
            <controllingField>Campaign_Type__c</controllingField>
            <picklistValues>
                <fullName>Field Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored User Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted User Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infographic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Syndication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted Field Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Lead Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales-Led</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changes__c</fullName>
        <description>What will we change next time?</description>
        <inlineHelpText>What will we change next time we do a marketing activity similar to this?</inlineHelpText>
        <label>Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Clicked_Through__c</fullName>
        <label>Clicked-Through</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Select all countries that are impacted by this campaign/program</description>
        <inlineHelpText>Select all countries that are impacted by this campaign/program. Important to help focus and chase how we are following up leads.</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxembourg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA-wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Emails_Opened__c</fullName>
        <label>Emails Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Event ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Bypass_Nurture_Timeout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected any responses to this campaign will ignore nurture timeout dates set on the lead/contact record.</description>
        <inlineHelpText>If selected any responses to this campaign will ignore nurture timeout dates set on the lead/contact record.</inlineHelpText>
        <label>Bypass Nurture Timeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Campaign_Notification_Override__c</fullName>
        <description>Allows you to override the defined Full Circle CRM Notification settings</description>
        <inlineHelpText>Select when notifications should fire if different than what is in the Full Circle CRM Notification settings.</inlineHelpText>
        <label>Campaign Notification Override</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Notify on Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Notify on Already Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Notify on Open or Already Engaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Campaign_Precedence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if a newly generated response to this campaign should replace an existing active response.</description>
        <inlineHelpText>Set to true if a newly generated response to this campaign should replace an existing active response.</inlineHelpText>
        <label>Campaign Precedence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Campaign_Sourced_By__c</fullName>
        <description>Used in the response intelligence tab to determine funnel attribution. Do not adjust these picklist values. Set as required on page layout.</description>
        <inlineHelpText>Please select which team is driving this campaign.</inlineHelpText>
        <label>Campaign Sourced By</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_CascadeParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to cascaded parent campaign</description>
        <inlineHelpText>Indicates the parent campaign if this campaign was created as the result of a repeat response.</inlineHelpText>
        <label>Cascade Parent</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cascaded Campaigns</relationshipLabel>
        <relationshipName>CascadeParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Cascade_Parent_ID__c</fullName>
        <description>Displays the ID of the Cascade Parent Campaign. Can be used for dynamic reports.</description>
        <formula>FCRM__FCR_CascadeParent__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the ID of the Cascade Parent Campaign.</inlineHelpText>
        <label>Cascade Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_ClosedOpRevenueModel1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Influenced revenue from responses related to closed-won campaigns</description>
        <inlineHelpText>Revenue Influenced by this campaign.</inlineHelpText>
        <label>Influence Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_ClosedOpRevenueModel2__c</fullName>
        <description>Influenced revenue from responses related to closed-won campaigns (model 2)</description>
        <inlineHelpText>Revenue Influenced by this campaign (model 2)</inlineHelpText>
        <label>Influence Revenue (model 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_ClosedOpRevenueModel3__c</fullName>
        <description>Influenced revenue from responses related to closed-won campaigns (model 3)</description>
        <inlineHelpText>Revenue Influenced by this campaign.(model 3)</inlineHelpText>
        <label>Influence Revenue (model 3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Cost_Per_Response_With_Repeats__c</fullName>
        <description>Cost Per Response with repeats is evaluated if the actual cost has a value and there are responses in the field Total Responses (with repeats) - else value is 0.</description>
        <formula>IF ( 
AND( 
NOT(ISBLANK(ActualCost )), 
NOT(ISBLANK( FCRM__FCR_Total_Responses_With_Repeats__c )),
FCRM__FCR_Total_Responses_With_Repeats__c&gt;0), 
ActualCost / FCRM__FCR_Total_Responses_With_Repeats__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated if the actual cost has a value and there are responses in the field Total Responses (with repeats).</inlineHelpText>
        <label>Cost Per Response (with repeats)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Cost_Per_Response__c</fullName>
        <description>Cost Per Response is evaluated if the actual cost has a value and there are responses, else value is 0.</description>
        <formula>IF ( 
AND( 
NOT(ISBLANK(ActualCost )), 
NOT(ISBLANK( NumberOfResponses)),
NumberOfResponses&gt;0), 
ActualCost / NumberOfResponses, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost Per Response is evaluated if the actual cost has a value and there are responses, else value is 0.</inlineHelpText>
        <label>Cost Per Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_LostOpRevenueModel1__c</fullName>
        <description>Influenced pipeline attributed to closed lost opportunities</description>
        <inlineHelpText>Influenced pipeline attributed to closed lost opportunities</inlineHelpText>
        <label>Influence Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_LostOpRevenueModel2__c</fullName>
        <description>Influenced pipeline attributed to closed lost opportunities from model 2</description>
        <inlineHelpText>Influenced pipeline attributed to closed lost opportunities from model 2</inlineHelpText>
        <label>Influence Lost (model 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_LostOpRevenueModel3__c</fullName>
        <description>Influenced pipeline attributed to closed lost opportunities from model 3</description>
        <inlineHelpText>Influenced pipeline attributed to closed lost opportunities from model 3</inlineHelpText>
        <label>Influence Lost (model 3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Marketing_Region__c</fullName>
        <description>The region this campaign is running in.</description>
        <inlineHelpText>The region this campaign is running in.</inlineHelpText>
        <label>Marketing Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Net_New_Names__c</fullName>
        <description># of responses where the campaign member Net New Name field is true. This value is updated via 24 hour batch process.</description>
        <inlineHelpText># of campaign members that are new names.</inlineHelpText>
        <label># Net New Names</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Net_New_Response_Ratio__c</fullName>
        <description>% of responses that are net new names.</description>
        <formula>(FCRM__FCR_Net_New_Names__c /  NumberOfResponses) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net New Response Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_OpenOpRevenueModel1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Revenue from responses related to open opportunities</description>
        <label>Influence Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_OpenOpRevenueModel2__c</fullName>
        <description>Revenue from responses related to open opportunities (model 2)</description>
        <inlineHelpText>Revenue from responses related to open opportunities (model 2)</inlineHelpText>
        <label>Influence Pipeline (model 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_OpenOpRevenueModel3__c</fullName>
        <description>Revenue from responses related to open opportunities (model 3)</description>
        <inlineHelpText>Revenue from responses related to open opportunities (model 3)</inlineHelpText>
        <label>Influence Pipeline (model 3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_QR_s__c</fullName>
        <description>Number of Qualified Responses on this Campaign. Updated via batch update.</description>
        <inlineHelpText>Number of Qualified Responses to this Campaign.</inlineHelpText>
        <label># Qualified Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_QR_to_Opportunity_Ratio__c</fullName>
        <description>% of qualified responses that resulted in an opportunity</description>
        <formula>(NumberOfOpportunities /  FCRM__FCR_QR_s__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% of qualified responses that resulted in an opportunity</inlineHelpText>
        <label>QR to Opportunity %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Qualified_Responses_With_Repeats__c</fullName>
        <description>Number of qualified responses including repeat (cascade) campaign responses. Updated by batch process every 24 hours. Data may not reflect most recent data depending on last update.</description>
        <inlineHelpText>Number of qualified responses including repeat (cascade) campaign responses. Updated by batch process every 24 hours. Data may not reflect most recent data depending on last update.</inlineHelpText>
        <label># Qualified Responses (with repeats)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Repeat_Campaign_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the campaign is a repeat (cascade) campaign, this indicates the number in the cascade.</description>
        <inlineHelpText>If the campaign is a repeat (cascade) campaign, this field indicates the number in the cascade.</inlineHelpText>
        <label>Repeat Campaign Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Repeat_Response_Timeout_Segments__c</fullName>
        <description>Indicates the minimum time allowed between responses to the same campaign by the same individual before they are added to a repeat campaign.  Without a value repeat responses will default to the global value.</description>
        <inlineHelpText>Indicates the minimum time allowed between responses to the same campaign by the same individual before they are added to a repeat campaign.</inlineHelpText>
        <label>Repeat Response Timeout Segments</label>
        <picklist>
            <picklistValues>
                <fullName>2 Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Repeat_Responses_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if repeat responses are allowed for this campaign (i.e. cascading enabled).</description>
        <inlineHelpText>True if repeat responses are allowed for this campaign (i.e. cascading enabled).</inlineHelpText>
        <label>Repeat Responses Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Responses_to_Won__c</fullName>
        <description>% of responses that converted to closed won opportunities.</description>
        <formula>(NumberOfWonOpportunities /  NumberOfResponses) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% of responses that resulted in a won opportunity.</inlineHelpText>
        <label>% Responses Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Sales_Information__c</fullName>
        <description>Provide information for the Sales team on followup. Displayed on the lead/contact layout for Active Responses.</description>
        <label>Sales Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_TotalOpRevenueModel1__c</fullName>
        <description>Total Influence Model 1</description>
        <formula>FCRM__FCR_LostOpRevenueModel1__c + FCRM__FCR_OpenOpRevenueModel1__c + FCRM__FCR_ClosedOpRevenueModel1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Influence Model 1</inlineHelpText>
        <label>Total Influence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_TotalOpRevenueModel2__c</fullName>
        <description>Total Influence Model 2</description>
        <formula>FCRM__FCR_LostOpRevenueModel2__c + FCRM__FCR_OpenOpRevenueModel2__c + FCRM__FCR_ClosedOpRevenueModel2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Influence Model 2</inlineHelpText>
        <label>Total Influence (model2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_TotalOpRevenueModel3__c</fullName>
        <description>Total Influence Model 3</description>
        <formula>FCRM__FCR_LostOpRevenueModel3__c + FCRM__FCR_OpenOpRevenueModel3__c + FCRM__FCR_ClosedOpRevenueModel3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Influence Model 3</inlineHelpText>
        <label>Total Influence (model3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Total_Responses_With_Repeats__c</fullName>
        <description>A count of the total responses to this campaign  and any repeat (cascade) campaign responses.Updated by batch process every 24 hours.</description>
        <inlineHelpText>Total number of responses with any any repeat (cascade) campaign responses.Updated by batch process every 24 hours.</inlineHelpText>
        <label>Total Responses (with repeats)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Defer_To_Reanimation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defer To Reanimation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Exclude_From_Reanimation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Reanimation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learns__c</fullName>
        <description>What &apos;Learns&apos; did we have from this marketing activity?</description>
        <label>Learns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter name of partner if this campaign is joint</description>
        <label>Partner (if applicable)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Closed_Won_Deals__c</fullName>
        <description>ROI on bookings = Value of Won Opportunities / Total Cost</description>
        <formula>AmountWonOpportunities / Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ROI on bookings = Value of Won Opportunities / Total Cost</inlineHelpText>
        <label>ROI (Closed Won Deals)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Pipeline__c</fullName>
        <description>Pipeline ROI (Total opportunity value / Total cost)</description>
        <formula>AmountAllOpportunities / Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI (Pipeline)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA - East (up to start FY14)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - UK &amp; Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Level__c</fullName>
        <label>Sponsorship Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wins__c</fullName>
        <description>What &apos;Wins&apos; did we have from this marketing activity?</description>
        <label>Wins</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>Alec_s_Mass_Drip_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>Alec&apos;s Mass Drip Campaign</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>AMOUNT_ALL</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>AppDynamicsStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appsphere_Conference_2014</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>Appsphere Conference 2014</value>
        </filters>
        <label>Appsphere Conference 2014</label>
        <sharedTo>
            <role>Marketing_User</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Webinars</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Webinar</value>
        </filters>
        <label>Partner Webinars</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prospecting_Lists</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>prospecting list</value>
        </filters>
        <label>Prospecting Lists</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>